# spencer_hsr

./: CMakeLists.txt  README.md  package.xml  spencer_hsr.rosinstall
launch/: tracking_on_hsr.launch
launch/classifiers/: openface_classifier.launch
launch/detectors/: front_rgbd_detectors.launch  laser_detectors.launch
launch/tracking/: freiburg_people_tracking.launch
